# genai-lab-slm

./: .coveragerc  .gitignore  LICENSE  README.md  TBD  TBD.2025-02-03  TBD.2025-02-07  appinsight.code-workspace  appvocai-discover.code-workspace  chgenv.py  conftest.py  environment.yml  genai-lab-slm.code-workspace  genailab.code-workspace  log4j.properties  package.json  pyproject.toml  requirements.txt  setup.cfg
admin/: version.dir
appinsight/: __init__.py  __main__.py  container.py
appinsight/acquisition/: __init__.py
appinsight/analysis/: __init__.py  base.py  config.py  data.py  dqa.py  explore.py  overview.py  sentiment.py
appinsight/application/: __init__.py  base.py  pipeline.py
appinsight/callbacks/: callback.py  callbacklist.py  early_stop.py  stats.py
appinsight/data_prep/: __init__.py  base.py  clean.py  dqa.py  feature.py  io.py  metrics.py  normalize.py  text_prep.py
appinsight/domain/: __init__.py  base.py  config.py  dataset.py  repo.py
appinsight/infrastructure/: logging.py
appinsight/shared/: __init__.py
appinsight/utils/: __init__.py  base.py  cache.py  convert.py  data.py  datetime.py  file.py  format.py  io.py  jbook.py  repo.py  version.py
appinsight/visual/: __init__.py
appinsight/workflow/: __init__.py  config.py  pipeline.py  task.py
appvocai/: __main__.py
appvocai/analysis/: base.py  data.py  dqa.py  sentiment.py
appvocai/application/: base.py  pipeline.py
appvocai/callbacks/: __init__.py  callbacklist.py  early_stop.py
appvocai/core/: artifact.py  enums.py  mixins.py
appvocai/data_prep/: io.py  (+9 more)
config/: base.yaml  clean.csv  custom_log4j.properties  dev.yaml  dev.yml  prod.yaml  prod.yml  task_config.csv  test.yaml  test.yml
discover/: __init__.py  __main__.py  container.py  setup.py
genailab/: __init__.py  __main__.py  container.py  setup.py
genailabslm/: __init__.py  __main__.py  container.py  setup.py
jbook/: _config.yml  _toc copy.yml  _toc.yml  references.bib
notebooks/: 00_intro.md  data model.xlsx
notes/: App Review Preprocessing & Analysis.pptx  Class inventory.xlsx  ClassInventory.csv  Codebook.xlsx  Copy of class_inventory_infra.xlsx  ModuleInventory.csv  application.mdj  class_inventory_infra.csv  class_inventory_infra.xlsx  data_cleaning_package_design.md  domain.mdj  eda.md  infrastructure_persistence.mdj  orchestration_package.md  package_organization.md  text_feature_engineering.md  tqa_heuristics_weights.csv  transitions.md  workflow.md
(+1630 files in other folders)
